--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -12,7 +12,7 @@ sections:
         text: "## Creating a project\n\nFirst, we need to set up a project for us to work in.\n\n*   Make sure HashBrown is running, and that you're on the dashboard page at [http://localhost](http://localhost). If you don't know what that means, check out the [getting started](/getting-started/) page.\n*   Click the \"+\" button under the \"Projects\" heading\n    \n![f96c9382f5b21ce9dc5fd1696eb7bfd41116054e](/media/f96c9382f5b21ce9dc5fd1696eb7bfd41116054e/guide-dashboard-create-project.jpg)    \n\n*   Name it something astoundingly clever, like \"awesomeproject_com\"\n*   Click the \"CMS\" button in the \"live\" environment\n\n\n![9b808f49c681c1092a31703a6004c993cf036635](/media/9b808f49c681c1092a31703a6004c993cf036635/guide-dashboard-start-cms.jpg)"
     -
         template: richTextSection
-        text: "## Setting up a connection\n\nIn order to publish [Content](/docs/content/) and use [Templates](/docs/templates/) and [Media](/docs/media/), we need to set up a [Connection](/docs/connections).\n\n### Create it\n\n*   Click on the \"Connections\" tab\n*   Right click in the pane and select \"New connection\"\n\n![649a3c1fb3b6ffd338ad5f9db9b2b4b6367966e5](/media/hashbrown_rocks/live/649a3c1fb3b6ffd338ad5f9db9b2b4b6367966e5)\n\n*   Name your connection something cool, we suggest \"Awesome Connection\"  \n*   Click the \"Save\" button in the bottom right\n\n### Configure it\n\nThere are a couple of options for connection types, but let's start with a [GitHub Pages](https://pages.github.com/) connection. If you're unfamiliar with GitHub Pages, it's an online service based on [Jekyll](http://jekyllrb.com/) that generates static sites rather than serving them actively. It's a huge money saver on hosting, because it's, well, free. Moving on:\n\n*   Download the [HashBrown GitHub Pages Boilerplate](https://github.com/Putaitu/hashbrown-boilerplate-github-pages/archive/latest.zip) and extract it somewhere.\n*   Go to it in your terminal and start the Jekyll server:\n\n~~~\ncd ./hashbrown-github-pages-boilerplate\njekyll serve\n~~~\n\n*   Back in the connection settings, pick the \"GitHub Pages\" connection type from the dropdown  \n*   Turn the \"Local\" switch on\n*   Type in the local path to the project (remember to end it with a \"/\")\n*   Click \"Save\"\n\n### Set up providers\n\nIn order for us to use [Templates](/docs/templates/) and [Media](/docs/media/), select your newly created connection from the dropdowns in the top of the connections list."
+        text: "## Setting up a connection\n\nIn order to publish [Content](/docs/content/) and use [Templates](/docs/templates/) and [Media](/docs/media/), we need to set up a [Connection](/docs/connections).\n\n### Create it\n\n*   Click on the \"Connections\" tab\n*   Right click in the pane and select \"New connection\"\n\n![649a3c1fb3b6ffd338ad5f9db9b2b4b6367966e5](/media/hashbrown_rocks/live/649a3c1fb3b6ffd338ad5f9db9b2b4b6367966e5)\n\n*   Name your connection something cool, we suggest \"Awesome Connection\"  \n*   Click the \"Save\" button in the bottom right\n\n### Configure it\n\nThere are a couple of options for connection types, but let's start with a [GitHub Pages](https://pages.github.com/) connection. If you're unfamiliar with GitHub Pages, it's an online service based on [Jekyll](http://jekyllrb.com/) that generates static sites rather than serving them actively. It's a huge money saver on hosting, because it's, well, free. Moving on:\n\n*   Download the [HashBrown GitHub Pages Boilerplate](https://github.com/Putaitu/hashbrown-boilerplate-github-pages/archive/latest.zip) and extract it somewhere.\n*   Go to it in your terminal and start the Jekyll server:\n\n~~~\ncd ./hashbrown-github-pages-boilerplate\njekyll serve\n~~~\n\n*   Back in the connection settings, pick the \"GitHub Pages\" connection type from the dropdown  \n*   Turn the \"Local\" switch on\n*   Type in the local path to the project (remember to end it with a \"/\")\n*   Click \"Save\"\n\n### Set up providers\n\nIn order for us to use [Templates](/docs/templates/) and [Media](/docs/media/), select your newly created connection from the dropdowns in the top of the connections list.\n\n![21e8c39e707caa3731f54e9c77ec8c26e54ad75b](media/21e8c39e707caa3731f54e9c77ec8c26e54ad75b/guide-cms-set-providers.jpg)"
     -
         template: richTextSection
         text: "## Setting up a schema\n\nNow we are going to configure how our [Content](/docs/content/) behaves. This is done through a [Schema](/docs/schemas/).\n\n### Create it\n\n*   Go to the \"Schemas\" tab\n*   Expand the \"Content base\" schema\n*   Right click the \"Page\" schema and click \"New child schema\"\n\n### Configure main properties\n\n*   Pick a fancy name for your schema, like \"Awesome Page\"\n*   Pick a fancy icon to go with it\n*   Set the default tab to \"Content\", which is where our custom properties will be. You can create more tabs later.\n\n### Configure field properties\n\n*   Type this into the \"field properties\" section:\n\n~~~\n{\n    \"template\": {\n        \"label\": \"Template\",\n        \"schemaId\": \"templateReference\",\n        \"config\": {\n            \"allowedTemplates\": [\"awesomePage\"]\n        }\n    },\n    \"text\": {\n        \"label\": \"Text\",\n        \"schemaId\": \"string\",\n        \"tabId\": \"content\"\n    }\n}\n~~~\n\n### Quick explanation\n\n*   The \"template\" and \"text\" keys are used to access the respective field values later on.\n*   The \"label\" is the key name the author sees in the CMS.\n*   The \"schemaId\" is the [Field Schema](/docs/schemas/fields)\n*   The \"tabId\" is the tab under which the field will appear\n*   The \"config\" is a configuration value applicable to some field schemas, in this case limiting the applicable page templates to the \"awesomePage\" template"
